--- a/web/src/main/resources/static/html/template/list_template.html
+++ b/web/src/main/resources/static/html/template/list_template.html
@@ -3,35 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../layui/css/layui.css">
+    <link rel="stylesheet" type="text/css" href="../../layui/css/layui.css">
 </head>
 <body>
 <table id="list_table" class="layui-hide"></table>
-
+<fieldset> 
+    <legend>0</legend>
+    <ul> 
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+    </ul>
+</fieldset>
 </body>
 <script type="text/javascript" src="../../layui/layui.js"></script>
 <script type="text/javascript">
-    // layui.config({
-    //     // base: '../js/modules/',      // 存放自定义modules的目录
-    //     response: {statusCode: 200}
-    // });
+    // 所有html页面的请求都提交到gateway，由gateway进行转发
+    const GATEWAY_URL = 'http://172.16.60.94:8003';
+    layui.config({
+        base: '../js/modules/',      // 存放自定义modules的目录
+    });
     layui.use('table', function () {
         var table = layui.table;
         table.render({
-            /*如果返回的json状态名与layui的规范不一致，就需要自定义匹配*/
+            elem: '#list_table',    // table标签上的id，不可用.class定位
+            /*向服务器请求数据*/
+            url: GATEWAY_URL + '/WMS-STORAGE/book',  // 获取数据的接口
+            /*如果服务器返回的json数据格式与layui的规范不一致，就需要自定义匹配*/
             response: {
-                statusName: 'status',//layui默认是code、msg、count、data
-                // msgName: '自定义的参数名称' , // 对应 msg
-                // countName: '自定义的参数名称' , // 对应 count
-                // dataName: '自定义的参数名称', // 对应 data
-                statusCode: 200
+                statusName: 'status',             // layui默认是code
+                // msgName: '自定义的参数名称' ,    // layui默认是msg
+                // countName: '自定义的参数名称' ,  // layui默认是count
+                // dataName: '自定义的参数名称',    // layui默认是data
+                statusCode: 200                   // 请求成功的状态码，服务器只有返回此状态码时，layui才会把数据展示在table中,否则即使请求成功也不会展示数据
             },
 
-            elem: '#list_table',
-            url: 'http://172.16.60.94:8003/WMS-STORAGE/book',  // 填写获取数据的接口
-
-
-            // height: 312,
+            // height: '100%',
             // celMinWidth: 80,    // 全局定义单元格最小宽度
             cols: [[
                 {field: 'isbn', title: 'ISBN', align: 'center', sort: true},
@@ -40,14 +48,17 @@
                 {field: 'publicationDate', title: '出版日期', align: 'center', sort: true},
                 {field: 'price', title: '单价', align: 'center', sort: true},
                 {field: 'amount', title: '库存', align: 'center', sort: true},
-                {fixed: 'right', toolbar: '#crudToolbar'}   // 功能操作列(CRUD)
+                {fixed: 'right', title: '可选操作', align: 'left', toolbar: '#crudToolbar'}   // 功能操作列(CRUD)
             ]],
-            skin: 'row', // 表格风格    line （行边框风格） row （列边框风格） nob （无边框风格）['line', 'row']行列都加边框
-            even: true,  // 隔行变色
-            loading: true,   // 请求数据时显示loading
-            page: true, // 开启分页
+
+            toolbar: '#toolbarDemo',
+
+            skin: 'row',    // 表格风格    line （行边框风格） row （列边框风格） nob （无边框风格）['line', 'row']行列都加边框
+            even: true,     // 隔行变色
+            loading: true,  // 请求数据时显示loading
+            page: true,     // 开启分页
             limits: [3, 5, 10],    // 每页显示的可选数量
-            limit: 5,    // 每页显示的默认数量
+            limit: 5,       // 每页显示的默认数量
             /* 请求成功后的操作，res就是所请求到的json数据 */
             done: function (res) {
                 console.log(res);
@@ -59,13 +70,21 @@
 <script type="text/html" id="authorTpl">
     <a href="http://www.baidu.com" class="layui-table-link">{{d.author}}</a>
 </script>
+<!--toolbar工具栏模板-->
+<script type="text/html" id="toolbarDemo">
+    <div class="layui-btn-container">
+        <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中行数据</button>
+        <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
+        <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button>
+    </div>
+</script>
 <!--toolbar功能操作列的单元格模板-->
 <script type="text/html" id="crudToolbar">
     <a class="layui-btn layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
     <!-- 这里同样支持 laytpl 语法，如： -->
-    {{#  if(d.author.length > 5){ }}
+    {{#  if(d.author!=null && d.author.length > 5){ }}
     <a class="layui-btn layui-btn-xs" lay-event="check">审核</a>
     {{#  } }}
 </script>
